--- a/EditorPrototype/EditorPrototype/Templates/GeneralTemplate.xaml
+++ b/EditorPrototype/EditorPrototype/Templates/GeneralTemplate.xaml
@@ -8,7 +8,7 @@
 
     <!-- VERTEX CONTROL -->
     <Style TargetType="{x:Type controls:VertexControl}">
-        <Setter Property="Background" Value="DarkGreen"/>
+        <Setter Property="Background" Value="{Binding Color}"/>
         <!--Setter Property="VertexShape" Value="Diamond"/-->
         <!--Setter Property= "ShowLabel" Value="True"/-->
 
@@ -24,17 +24,18 @@
 
     <!-- EDGE CONTROL -->
     <Style TargetType="{x:Type controls:EdgeControl}">
-        <Setter Property="SelfLoopIndicatorOffset" Value="10,10"/>
+        <Setter Property="SelfLoopIndicatorOffset" Value="0,0"/>
+        <Setter Property="DashStyle" Value="{Binding DashStyle}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:EdgeControl}">
                     <Grid>
-                        <Path Stroke="#FF976969"
-                              StrokeThickness="3"
+                        <Path Stroke="Black"
+                              StrokeThickness="2"
                               ToolTip="{TemplateBinding ToolTip}" 
                               x:Name="PART_edgePath"/>
                         <controls:DefaultEdgePointer NeedRotation="true" x:Name="PART_EdgePointerForTarget" >
-                            <Path Data="M0,0.5 L1,1 1,0" Fill="Black" Stretch="Uniform" Width="15" Height="15"/>
+                            <Path Data="M0,0.5 L1,1 1,0 0,0.5" Fill="{Binding PointerFillColor}" Stretch="Uniform" Width="15" Height="15" Stroke="Black" StrokeThickness="2"/>
                         </controls:DefaultEdgePointer>
                         <Path x:Name="PART_SelfLoopedEdge" 
                               Width="10" 
