--- a/EditorPrototype/EditorPrototype/MainWindow.xaml
+++ b/EditorPrototype/EditorPrototype/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="EditorPrototype.MainWindow"
+﻿<Window x:Class="EditorPrototype.MainWindow" x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -25,12 +25,12 @@
         
         <Border Grid.Row="0" Grid.Column="0" BorderThickness="1"  Margin="2" >
             <controls1:ZoomControl x:Name="g_zoomctrl" >
-                <wpf:GraphAreaExample x:Name="g_Area"/>
+                <wpf:GraphAreaExample x:Name="g_Area" />
             </controls1:ZoomControl>
         </Border>
 
         <DockPanel Grid.Column="1" Grid.Row="0">
-            <Grid Name="rightPanel">
+            <Grid x:Name="rightPanel">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" MinHeight="100"/>
                     <RowDefinition Height="Auto" MinHeight="70"/>
