Made attributes respect generalization

--- a/EditorPrototype/EditorPrototype/Templates/GeneralTemplate.xaml
+++ b/EditorPrototype/EditorPrototype/Templates/GeneralTemplate.xaml
@@ -36,7 +36,7 @@
                         </ControlTemplate>
                     </Setter.Value>
                 </Setter>
-                <Setter Property="Background" Value="LightBlue" />
+                <Setter Property="Background" Value="LightCoral" />
             </DataTrigger>
         </Style.Triggers>
     </Style>
