--- a/src/EditorPrototype/Templates/GeneralTemplate.xaml
+++ b/src/EditorPrototype/Templates/GeneralTemplate.xaml
@@ -10,17 +10,35 @@
 
     <!-- VERTEX CONTROL -->
     <Style TargetType="{x:Type controls:VertexControl}">
-        <Setter Property="Background" Value="{Binding Color}"/>
-        <!--Setter Property="VertexShape" Value="Diamond"/-->
-        <!--Setter Property= "ShowLabel" Value="True"/-->
-
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="VertexShape" Value="None"/>
+        <Setter Property= "ShowLabel" Value="False"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type controls:VertexControl}">
+                    <Image Source="pack://application:,,,/Pictures/Vertex.png" Margin="0" Width="80" Stretch="UniformToFill"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
 
         <!-- VERTEX DRAGGING CONTROL -->
         <Setter Property="controls:DragBehaviour.IsDragEnabled" Value="True" />
         <Setter Property="controls:DragBehaviour.UpdateEdgesOnMove" Value="True" />
 
+
         <Style.Triggers>
             <DataTrigger Binding="{Binding VertexType}" Value="Attribute">
+
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type controls:VertexControl}">
+                            <Image Source="pack://application:,,,/Pictures/star1.png" Margin="0" Width="80" Stretch="UniformToFill"/>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </DataTrigger>
+            <DataTrigger Binding="{Binding VertexType}" Value="Node">
+
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type controls:VertexControl}">
@@ -29,6 +47,7 @@
                                     CornerRadius="0,0,0,0"
                                     Padding="{TemplateBinding Padding}">
                                 <Grid>
+                                    <Image Source="pack://application:,,,/Pictures/star2.png" Margin="0" Width="80" Stretch="UniformToFill"/>
                                     <ContentPresenter Content="{TemplateBinding Vertex}" />
                                     <controls:VertexLabelControl x:Name="PART_vertexLabel" Content="{Binding Vertex, RelativeSource={RelativeSource TemplatedParent}}" />
                                 </Grid>
@@ -36,7 +55,6 @@
                         </ControlTemplate>
                     </Setter.Value>
                 </Setter>
-                <Setter Property="Background" Value="LightCoral" />
             </DataTrigger>
         </Style.Triggers>
     </Style>
@@ -50,7 +68,8 @@
                               ToolTip="{TemplateBinding ToolTip}" 
                               x:Name="PART_edgePath"/>
             <controls:DefaultEdgePointer NeedRotation="true" x:Name="PART_EdgePointerForTarget" >
-                <Path Data="M0,0.5 L1,1 1,0 0,0.5" Fill="White" Stretch="Uniform" Width="15" Height="15" Stroke="Black" StrokeThickness="2"/>
+                <Path Data="M0,0.5 L1,1 1,0 0,0.5" Fill="White" Stretch="Uniform" Width="15" Height="15" Stroke="Black" StrokeThickness="2" 
+                              StrokeDashArray="1"/>
             </controls:DefaultEdgePointer>
             <Path x:Name="PART_SelfLoopedEdge" 
                               Width="10" 
@@ -85,8 +104,8 @@
 
     <ControlTemplate x:Key="AttributeEdge" TargetType="{x:Type controls:EdgeControl}">
         <Grid>
-            <Path Stroke="Green"
-                              StrokeThickness="2"
+            <Path Stroke="Green" 
+                              StrokeThickness="1"
                               ToolTip="{TemplateBinding ToolTip}" 
                               x:Name="PART_edgePath"/>
             <controls:DefaultEdgePointer NeedRotation="true" x:Name="PART_EdgePointerForTarget" >
@@ -105,7 +124,7 @@
                               Data="F1 M 17.4167,32.25L 32.9107,32.25L 38,18L 43.0893,32.25L 58.5833,32.25L 45.6798,41.4944L 51.4583,56L 38,48.0833L 26.125,56L 30.5979,41.7104L 17.4167,32.25 Z "/>
         </Grid>
     </ControlTemplate>
-
+    
     <ControlTemplate x:Key="TypeEdge" TargetType="{x:Type controls:EdgeControl}">
         <Grid>
             <Path Stroke="Blue"
@@ -132,7 +151,6 @@
     <!-- EDGE CONTROL -->
     <Style TargetType="{x:Type controls:EdgeControl}">
         <Setter Property="SelfLoopIndicatorOffset" Value="0,0"/>
-        <Setter Property="DashStyle" Value="{Binding DashStyle}"/>
         <Setter Property="Template" Value="{StaticResource GeneralizationEdge}"/>
         <Setter Property="ShowLabel" Value="True"/>
         <Style.Triggers>
