--- a/src/EditorPrototype/MainWindow.xaml
+++ b/src/EditorPrototype/MainWindow.xaml
@@ -6,7 +6,7 @@
         
         xmlns:wpf="clr-namespace:EditorPrototype"
         xmlns:controls1="http://schemas.panthernet.ru/graphx/"
-        Title="funreal"
+        Title="REAL.NET"
         mc:Ignorable="d"
         Height="600" Width="800">
     <Grid>
