--- a/src/EditorPrototype/ConstraintsWindow.xaml
+++ b/src/EditorPrototype/ConstraintsWindow.xaml
@@ -1,18 +1,17 @@
-﻿<Window x:Class="EditorPrototype.Window1"
+﻿<Window x:Class="EditorPrototype.ConstraintsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EditorPrototype"
         mc:Ignorable="d"
-        Title="Window1" Height="300" Width="300">
+        Title="ConstraintsWindow" Height="300" Width="300">
         <Grid>
         <ComboBox x:Name="nodeTypeCombobox"
             HorizontalAlignment="Left"
             Margin="10,10,0,0"
             VerticalAlignment="Top"
-            Width="120" ItemsSource="">
-            
+            Width="120" ItemsSource="{Binding EdgesListEnum}">
         </ComboBox>
     </Grid>
 </Window>
